tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__MakingaListCheck-AAAAAAAAAAAAAAAAAAAF4w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1507,
  "prerequisites": [
    54
  ],
  "properties": {
    "auto_claim": false,
    "desc": "As your base grows, you're going to have a dozen different long term goals each with many steps. Build a clipboard to keep track of what you need to do.\n\n[note]Hint: You can put the clipboard on a wall using shift-right-click.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lMaking a List, Checking it Twice",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    54
  ],
  "rewards": [],
  "tasks": []
}
