tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__MiningDirtBlockb-AAAAAAAAAAAAAAAAAAAC6A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 744,
  "prerequisites": [
    741
  ],
  "properties": {
    "auto_claim": false,
    "desc": "By making an excavator you are now able to mine dirt in a 3x3 area. You can use iron, steel, or obzinite poured from the Smeltery, it doesn't need to be steel.\n\nHigher tier metals require the MV extruder. Don't destroy your whole garden.\n\n§6The quest should accept the tool whatever materials you used.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lMining Dirt Block by Block is so Old School",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    741
  ],
  "rewards": [],
  "tasks": []
}
