tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__MudCanAlsobeUsed-AAAAAAAAAAAAAAAAAAAHew==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1915,
  "prerequisites": [
    51
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You may have found plenty of mud piles around the wetlands and thought of them as mere annoyances when jumping in the water or for that armor. Waste not! With your new extractor, you can pull out the clay hidden in the mud!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lMud, Can Also be Used For Facials",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    51
  ],
  "rewards": [],
  "tasks": []
}
