tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__NiceNetherTrees-AAAAAAAAAAAAAAAAAAAGzQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1741,
  "prerequisites": [
    496
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There are a few very useful Nether trees out there which give resources like Redstone, Gunpowder, Bone meal or Fertilizer.\n\nGo and get a few trees like Bloodwood, Fusewood, Darkwood or Ghostwood out of the Nether.\n\nThese trees can be planted like normal trees, except for Bloodwood. That has to be planted on a ceiling and will grow down instead of up.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lNice Nether Trees",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    496
  ],
  "rewards": [],
  "tasks": []
}
