tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__OneAnvil-AAAAAAAAAAAAAAAAAAACtg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 694,
  "prerequisites": [
    54
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With your brand-new Compressor you are able to make some metal blocks for your new anvil. You're required to craft at least one for the Forge Hammer.\n\n§3With the anvil you can repair, rename and enchant armor and tools.§r",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lOne Anvil...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    54
  ],
  "rewards": [],
  "tasks": []
}
